[FIX] Overflow cards

--- a/styles/0/teams/Team.module.scss
+++ b/styles/0/teams/Team.module.scss
@@ -320,7 +320,7 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-start !important;
-        align-items: flex-start !important;     
+        align-items: flex-start !important;
         align-content: flex-start !important;
         flex-wrap: wrap;
     }
@@ -707,9 +707,12 @@
     justify-content: space-between;
 
     &_info {
+        position: relative;
         display: flex;
         flex-direction: row;
         align-items: center;
+        max-width: 70%,
+
     }
 
     &_avatar {
